# terbilang

./: Cargo.toml  readme.md
src/: divider.rs  lib.rs  main.rs
tests/: integration_test.rs
