[package]
name = "yaterbilang"
version = "0.1.5"
edition = "2021"
license-file = "LICENSE.md"
description = "Yet another terbilang"
#homepage = ""
#documentation = ""
repository = "https://github.com/rahmatnazali/yaterbilang"
readme = "readme.md"
keywords = ["number", "indonesian", "verbose", "said", "terbilang"]
exclude = [".idea/*", "*.iml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
